--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,106 @@
-/* You can add global styles to this file, and also import other style files */
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+@import 'themes.scss';
+*,
+::before,
+::after{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Playfair Display', serif;
+font-family: 'Poppins', sans-serif;
+font-family: 'Ubuntu', sans-serif;
+}
+.flex{                       
+    display: flex;
+    gap: var(--gap, 1rem);    
+    }
+.center
+{
+        text-align: center;
+        justify-content: center;align-items: center;
+        display: flex;
+}
+.miniheadings{
+    text-align:center;
+    margin-block: 2rem;
+    font-size: 2.4rem;
+    color: $the-blue;
+    text-transform: capitalize;
+    text-decoration: underline wavy $the-blue;
+}
+.button-happyhour{
+    margin-block: 1.5rem;
+ }
+ .read-more{
+    padding: .5em 2em;
+    background-color: $yellowish;
+    text-decoration: none;
+    font-weight: bold;
+    text-transform: capitalize;
+    border: 3px dotted $white;
+    color: $white;
+    border-radius: 30px;
+    box-shadow: 0 0 0 6px $yellowish;
+}
+
+// styling for the entertainment-package page
+.diagonal-content{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    color: $white;
+}
+.small-card{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $white;
+    color: $the-blue;
+    padding: .4em;
+    margin: 10px;
+    border-radius: 15px;
+    box-shadow: 0 0 0 6px $white;
+}
+.border-yellow{
+    border: 2px dotted $yellowish;
+}
+.border-blue{
+    border: 2px dotted $the-blue;
+}
+.border-cyan{
+    border: 2px dotted $light-bluish;
+}
+
+.headings-h3 {
+    font-size: 1.9rem;
+    text-decoration: underline wavy;
+    color: $the-blue;
+    text-transform: capitalize;
+    display: inline;
+  }
+@media (min-width:35em) and (max-width:60em) {
+    .miniheadings{
+        font-size: 3rem;
+        text-decoration: none;
+        background-image: linear-gradient($pinkish, $pinkish);
+    background-position: bottom;
+    background-size: (100% 30%);
+    background-repeat: no-repeat;
+    }
+}
+
+
+
+@media (min-width : 60em) {
+
+    .miniheadings{
+        font-size: 3.4rem;
+        text-decoration: none;
+        background-image: linear-gradient($pinkish, $pinkish);
+    background-position: bottom;
+    background-size: (100% 30%);
+    background-repeat: no-repeat;
+    }
+}
