--- a/src/app/modules/shared/navbar/navbar.component.scss
+++ b/src/app/modules/shared/navbar/navbar.component.scss
@@ -1,11 +1,13 @@
 
 @import 'src/themes.scss';
 /* Dropdown Button */
+.logo1{
+    height:"30px" !important;
+}
 .dropbtn {
     border: none;
     outline: none;
     color: white;
-    padding: 16px;
     background-color: inherit;
     font-family: inherit; /* Important for vertical align on mobile phones */
     margin: 0; /* Important for vertical align on mobile phones */
@@ -21,19 +23,23 @@
   .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #181717;
+    background-color:#0a0a22 ;
     color: black;
-    width: 100%;
+    padding-inline: 3px;
+    border-radius: 15px;
+    width: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
   
   /* Links inside the dropdown */
   .dropdown-content a {
-    color: black;
-    padding: 12px 16px;
+    color:#0a0a22;
+    padding: 15px 16px;
     text-decoration: none;
     display: block;
+    border-radius: 15px;
+   
   }
   
   /* Change color of dropdown links on hover */
@@ -44,7 +50,7 @@
   .demo-button{
     Border: 1px solid #bf2525;
   padding: 4px 8px;
-  background-color: #0000005c;
+  background-color: #0a0a22;
   color: #bf2525;
   border-radius: 30px;
   }
@@ -57,12 +63,27 @@
     align-items: center;
     width: 100%;
     justify-content: space-between;
-    background:$the-blue;
-    box-shadow: 2px 2px 2px $clr-secondary;
+    background:#0a0a22;
+    box-shadow: 2px 2px 2px #0a0a22;
     position: fixed;
     z-index: 9999;
 top: 0;
     // color:#fff
+}
+.chevron{
+    display: flex;
+    gap: 2px;
+    align-items: center;
+}
+.sr-only{
+    border: 0;
+  clip: rect(0, 0, 0, 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
 }
 .mobile-nav-toggle{
     display: none;
@@ -79,7 +100,7 @@ top: 0;
 }
 .primary-navigation a:hover{
     text-decoration: none;
-    color: #f9dc5c;
+    color: $yellowish;
 }
 .primary-navigation a > [aria-hidden="true"]{
     font-size: 700;
@@ -87,7 +108,7 @@ top: 0;
 }
 .primary-navigation a.active{
     text-decoration: underline;
-    color: #f9dc5c;
+    color: $yellowish;
 }
 .searchinner{
     padding: .4em;
@@ -96,15 +117,11 @@ top: 0;
 // display: inline-block;
 width: 2em;
 }
-.backgroundyellow{
-    background-color: $yellowish;
-}
 
-.searchouter{
-    padding:.7em .3em ;
-    border-radius: 50%;
-}
 @media (max-width:75em) {
+    .logo1{
+        padding: 0;
+    }
     .logo{
         margin-block: .6em;
     }
@@ -116,7 +133,7 @@ width: 2em;
         z-index: 1000;
         flex-direction: column;
         padding: min(30vh, 10rem) 2em;
-        background: hsla(224, 93%, 21%, 0.815);
+        background: hsla(227, 47%, 4%, 0.815);
         transition: transform 350ms ease-out;
         transform: translateX(100%);
     
@@ -146,8 +163,8 @@ width: 2em;
         top: 1rem;
         right: 2rem;
         background: url('/assets/exit2.png');
-        width: 3rem;
         background-repeat: no-repeat;
+        background-size: cover;
         border: none;
         aspect-ratio: 1;
         z-index: 9999;
@@ -169,7 +186,7 @@ display: none;
     
     .primary-navigation{
         padding-block: 1rem;
-        padding-inline:clamp(1rem, 8vw, 10rem) ;
+        padding-inline:clamp(1rem, 5vw, 10rem) ;
     }
     
 }
