--- a/src/themes.scss
+++ b/src/themes.scss
@@ -3,8 +3,7 @@ $light-bluish: #b8d6ffff;
 $white:#ffff;
 $the-blue:#23416cff;
 $pinkish:#e0a8d9ff;
-$yellowish:#f3ca40ff;
-$clr-primary:#ED254E;
+$yellowish:#ED4B25;
 $clr-secondary:#011936;
 $clr-tertiary:#465662;
 $clr-clear:#C2EABD;
