addition of navigation

--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -9,7 +9,7 @@
     <nav class="space-around">
         <ul id="primary-navigation" class="primary-navigation flex" data-attribute="false">
             <li >
-                <a routerLink="#" class="active">
+                <a routerLink="" class="active">
                     <span aria-hidden="true"></span>Home
                 </a>
             </li>
