--- a/src/app/modules/shared/footer/footer.component.html
+++ b/src/app/modules/shared/footer/footer.component.html
@@ -1,1 +1,42 @@
-<p>footer works!</p>
+<div class="main-container">
+    <div class="footer1">
+        <h3 class="h3-solutions pt-3 pb-4 pl-2 ">Proscene.</h3>
+        <p class="p-solutions1 p-2"><a routerLink="Southern Byp, Nairobi" target="_blank"><ng-icon
+                    name="heroMapPin"></ng-icon> Southern Bypass, Nairobi</a></p>
+        <p class="p-solutions1 p-2"><a routerLink=""><ng-icon name="heroPhone"></ng-icon> 0713761269</a></p>
+        <p class="p-solutions1 p-2"><a routerLink="info@proscene.co.ke"><ng-icon
+                    name="heroChatBubbleLeftRight"></ng-icon> info@proscene.co.ke</a></p>
+    </div>
+    <div class="footer2">
+        <h3 class="h3-solutions pt-3 pb-4 pl-2 ">Solutions.</h3>
+        <p class="p-solutions1 p-2"><a routerLink="/about-us/mission">Education</a></p>
+        <p class="p-solutions1 p-2"><a routerLink="/about-us/vision">Video walls</a></p>
+        <p class="p-solutions1 p-2"><a routerLink="/about-us/team">Unified communications</a></p>
+        <p class="p-solutions1 p-2"><a routerLink="/about-us/mission">Meeting solutions</a></p>
+        <p class="p-solutions1 p-2"><a routerLink="/about-us/vision">Digital signage</a></p>
+        <p class="p-solutions1 p-2"><a routerLink="/about-us/team">Government projects</a></p>
+        <p class="p-solutions1 p-2"><a routerLink="/about-us/mission">Law firm technology</a></p>
+        <p class="p-solutions1 p-2"><a routerLink="/about-us/vision">Religious Organisations</a></p>
+    </div>
+    <div class="footer3">
+        <h3 class="h3-solutions pt-3 pb-4 pl-2 ">Partners.</h3>
+
+        <p class="p-solutions1 p-2"><a routerLink="">LG</a></p>
+        <p class="p-solutions1 p-2"><a routerLink="">Optoma</a></p>
+        <p class="p-solutions1 p-2"><a routerLink="">Extron</a></p>
+        <p class="p-solutions1 p-2"><a routerLink="">Samsung</a></p>
+        <p class="p-solutions1 p-2"><a routerLink="">Epson</a></p>
+        <p class="p-solutions1 p-2"><a routerLink="">Avaya</a></p>
+        <p class="p-solutions1 p-2"><a routerLink="">Panasonic</a></p>
+
+    </div>
+    <div class="footer4">
+        <h3 class="h3-solutions pt-3 pb-4 pl-2 ">Useful Links.</h3>
+        <p class="p-solutions1 p-2"><a routerLink="">Home</a></p>
+        <p class="p-solutions1 p-2"><a routerLink="">Contact Us</a></p>
+        <p class="p-solutions1 p-2"><a routerLink="">Blog</a></p>
+        <p class="p-solutions1 p-2"><a routerLink="">See Demo</a></p>
+        <p class="p-solutions1 p-2"><a routerLink="">Shop</a></p>
+        <p class="p-solutions1 p-2"><a routerLink="">Support</a></p>
+    </div>
+</div>
