--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -70,7 +70,7 @@
             </li>
         </ul>
         <ul id="primary-navigation" class="primary-navigation flex section2 " data-attribute="false">
-            <button class="demo-button">See demo</button>
+            <button class="demo-button" style="padding-bottom: 7px;">See demo</button>
         </ul> 
     </nav>
 </header>
