--- a/src/themes.scss
+++ b/src/themes.scss
@@ -1,7 +1,7 @@
 
 $light-bluish: #b8d6ffff;
 $white:#ffff;
-$the-blue:#23416cff;
+$the-blue:#0a0a22;
 $pinkish:#e0a8d9ff;
 $yellowish:#ED4B25;
 $clr-secondary:#011936;
