--- a/src/app/modules/shared/navbar/navbar.component.scss
+++ b/src/app/modules/shared/navbar/navbar.component.scss
@@ -56,6 +56,7 @@
 .primary-header{
     align-items: center;
     width: 100%;
+    max-width: 1500px;
     justify-content: space-between;
     background:#0a0a22;
     box-shadow: 2px 2px 2px #0a0a22;
