--- a/src/app/modules/shared/page-not-found/page-not-found.component.html
+++ b/src/app/modules/shared/page-not-found/page-not-found.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <div class="main">
     <div class="flex flex-col words items-center">
-        <h2>OOPS!</h2>
-    <h3>We can't find the page you are looking for</h3>
+        <h2 class="h2-oops">OOPS!</h2>
+    <h3 class="h3-oops">We can't find the page you are looking for</h3>
     </div>
 </div>
