creating a module called solutions and creating components in it for all the options in the navbar

--- a/src/app/modules/shared/navbar/navbar.component.html
+++ b/src/app/modules/shared/navbar/navbar.component.html
@@ -19,7 +19,7 @@
                         <span aria-hidden="true"></span>Solutions <ng-icon name="heroChevronDown"></ng-icon>
                 </a>
                 <div class="dropdown-content">
-                    <a routerLink="/about-us/mission">Education</a>
+                    <a routerLink="/education">Education</a>
                     <a routerLink="/about-us/vision">Video walls</a>
                     <a routerLink="/about-us/team">Unified communications</a>
                     <a routerLink="/about-us/mission">Meeting solutions</a>
